<resources>
    <string name="app_name">MoviesStageOne</string>
    <string name="action_refresh">Refresh</string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="movie_image">Movie Image</string>
    <string name="play_pauseButton">Play-Pause Button</string>
    <string name="no_network_error_message">Check your Internet connectivity and try again.</string>
    <string name="api_key">apiKey</string>
    <string name="content_authority">com.example.dsekar.moviesstageone</string>
    <string name="navbar_video">Video</string>
    <string name="navbar_overview">Overview</string>
    <string name="navbar_review">Review</string>
    <string name="menu_favorite">Favorites</string>
    <string name="no_favorites">No Favorite movies.</string>
    <string name="no_review_results">No Results</string>
    <string name="backdrop_contentDes">Backdrop Image</string>
    <string name="video_poster">Video Poster</string>
    <string name="key_not_found">Movies Api Key not found</string>
</resources>
