<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/most_popular"
        android:orderInCategory="2"
        android:title="@string/most_popular"
        app:showAsAction="never" />

    <item
        android:id="@+id/high_rated"
        android:orderInCategory="3"
        android:title="@string/highest_rated"
        app:showAsAction="never" />

    <item
        android:id="@+id/fav_button"
        android:orderInCategory="4"
        android:title="@string/menu_favorite"
        app:showAsAction="never" />

</menu>