<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/overview"
        android:title="@string/navbar_overview"
        android:icon="@drawable/ic_folder_open_black_18dp"
        android:enabled="true"
        app:showAsAction="ifRoom">
    </item>

    <item android:id="@+id/Video"
        android:icon="@drawable/ic_ondemand_video_black_24dp"
        android:title="@string/navbar_video"
        android:enabled="true"
        app:showAsAction="ifRoom">
    </item>

    <item android:id="@+id/Review"
        android:title="@string/navbar_review"
        android:icon="@drawable/ic_rate_review_black_24dp"
        android:enabled="true"
        app:showAsAction="ifRoom">
    </item>

</menu>